--- a/presentation.tex
+++ b/presentation.tex
@@ -131,7 +131,7 @@ Pierwotnie analiza n-gramów rozwijana była na potrzeby analizy języka natural
 
 
 % latex table generated in R 3.2.0 by xtable 1.7-4 package
-% Thu May  7 11:58:59 2015
+% Thu May  7 12:47:02 2015
 \begin{table}[ht]
 \centering
 \begin{tabular}{rllllll}
@@ -150,7 +150,7 @@ S1 & C & T & T & A & G & C \\
 
   
 % latex table generated in R 3.2.0 by xtable 1.7-4 package
-% Thu May  7 11:58:59 2015
+% Thu May  7 12:47:02 2015
 \begin{table}[ht]
 \centering
 \begin{tabular}{rrrrr}
@@ -171,7 +171,7 @@ S1 & 1 & 2 & 1 & 2 \\
 \begin{frame}
 
 % latex table generated in R 3.2.0 by xtable 1.7-4 package
-% Thu May  7 11:58:59 2015
+% Thu May  7 12:47:02 2015
 \begin{table}[ht]
 \centering
 \begin{tabular}{rllllll}
@@ -190,7 +190,7 @@ S1 & C & T & T & A & G & C \\
 
   
 % latex table generated in R 3.2.0 by xtable 1.7-4 package
-% Thu May  7 11:58:59 2015
+% Thu May  7 12:47:03 2015
 \begin{table}[ht]
 \centering
 \begin{tabular}{rrrrrrrrr}
@@ -240,7 +240,7 @@ n-gramy mogą być przypisaną informację o pozycjach na których występują.
 \begin{frame}
 
 % latex table generated in R 3.2.0 by xtable 1.7-4 package
-% Thu May  7 11:59:00 2015
+% Thu May  7 12:47:03 2015
 \begin{table}[ht]
 \centering
 \begin{tabular}{rllllll}
@@ -259,7 +259,7 @@ S1 & C & T & T & A & G & C \\
 
   
 % latex table generated in R 3.2.0 by xtable 1.7-4 package
-% Thu May  7 11:59:00 2015
+% Thu May  7 12:47:03 2015
 \begin{table}[ht]
 \centering
 \begin{tabular}{rrrrrrrrr}
@@ -310,7 +310,7 @@ n-gramy mogą być nieciągłe - pomiędzy elementami n-gramu mogą występować
 \begin{frame}
 
 % latex table generated in R 3.2.0 by xtable 1.7-4 package
-% Thu May  7 11:59:00 2015
+% Thu May  7 12:47:03 2015
 \begin{table}[ht]
 \centering
 \begin{tabular}{rllllll}
@@ -329,7 +329,7 @@ S1 & C & T & T & A & G & C \\
 
   
 % latex table generated in R 3.2.0 by xtable 1.7-4 package
-% Thu May  7 11:59:00 2015
+% Thu May  7 12:47:03 2015
 \begin{table}[ht]
 \centering
 \begin{tabular}{rrrrrrrrr}
@@ -530,15 +530,15 @@ Zbiór danych: 146 amyloidów i 290 nieamyloidów~\citep{kotulska2014}.
 \begin{frame}
 
 \begin{itemize}
-\item Duże różnice w częstościach aminokwasów pozwalają na użycie n-gramów.
-\item Nierówne długości peptydów wykluczają użycie n-gramów z informacją o pozycji.
+\item Duże różnice w częstościach aminokwasów sugerują użycie n-gramów.
+\item Nierówne długości peptydów wykluczają n-gramy z informacją o pozycji.
 \end{itemize}
 
 \end{frame}
 
 
 
-\subsection{Analiza n-gramów}
+\subsection{Wybór n-gramów}
 
 \begin{frame}
 %czy możemy binaryzowac n-gramy?
@@ -548,11 +548,18 @@ Zbiór danych: 146 amyloidów i 290 nieamyloidów~\citep{kotulska2014}.
 
 \end{frame}
 
+\begin{frame}
+
+\includegraphics[width=\maxwidth]{figure/unnamed-chunk-15-1} 
+
+
+\end{frame}
+
 
 \begin{frame}
 
 
-\includegraphics[width=\maxwidth]{figure/unnamed-chunk-15-1} 
+\includegraphics[width=\maxwidth]{figure/unnamed-chunk-16-1} 
 
 
 \end{frame}
