--- a/presentation.tex
+++ b/presentation.tex
@@ -131,7 +131,7 @@ Pierwotnie analiza n-gramów rozwijana była na potrzeby analizy języka natural
 
 
 % latex table generated in R 3.2.0 by xtable 1.7-4 package
-% Thu May  7 12:47:02 2015
+% Thu May  7 13:31:37 2015
 \begin{table}[ht]
 \centering
 \begin{tabular}{rllllll}
@@ -150,7 +150,7 @@ S1 & C & T & T & A & G & C \\
 
   
 % latex table generated in R 3.2.0 by xtable 1.7-4 package
-% Thu May  7 12:47:02 2015
+% Thu May  7 13:31:37 2015
 \begin{table}[ht]
 \centering
 \begin{tabular}{rrrrr}
@@ -171,7 +171,7 @@ S1 & 1 & 2 & 1 & 2 \\
 \begin{frame}
 
 % latex table generated in R 3.2.0 by xtable 1.7-4 package
-% Thu May  7 12:47:02 2015
+% Thu May  7 13:31:37 2015
 \begin{table}[ht]
 \centering
 \begin{tabular}{rllllll}
@@ -190,7 +190,7 @@ S1 & C & T & T & A & G & C \\
 
   
 % latex table generated in R 3.2.0 by xtable 1.7-4 package
-% Thu May  7 12:47:03 2015
+% Thu May  7 13:31:37 2015
 \begin{table}[ht]
 \centering
 \begin{tabular}{rrrrrrrrr}
@@ -240,7 +240,7 @@ n-gramy mogą być przypisaną informację o pozycjach na których występują.
 \begin{frame}
 
 % latex table generated in R 3.2.0 by xtable 1.7-4 package
-% Thu May  7 12:47:03 2015
+% Thu May  7 13:31:37 2015
 \begin{table}[ht]
 \centering
 \begin{tabular}{rllllll}
@@ -259,7 +259,7 @@ S1 & C & T & T & A & G & C \\
 
   
 % latex table generated in R 3.2.0 by xtable 1.7-4 package
-% Thu May  7 12:47:03 2015
+% Thu May  7 13:31:37 2015
 \begin{table}[ht]
 \centering
 \begin{tabular}{rrrrrrrrr}
@@ -310,7 +310,7 @@ n-gramy mogą być nieciągłe - pomiędzy elementami n-gramu mogą występować
 \begin{frame}
 
 % latex table generated in R 3.2.0 by xtable 1.7-4 package
-% Thu May  7 12:47:03 2015
+% Thu May  7 13:31:37 2015
 \begin{table}[ht]
 \centering
 \begin{tabular}{rllllll}
@@ -329,7 +329,7 @@ S1 & C & T & T & A & G & C \\
 
   
 % latex table generated in R 3.2.0 by xtable 1.7-4 package
-% Thu May  7 12:47:03 2015
+% Thu May  7 13:31:37 2015
 \begin{table}[ht]
 \centering
 \begin{tabular}{rrrrrrrrr}
@@ -540,6 +540,18 @@ Zbiór danych: 146 amyloidów i 290 nieamyloidów~\citep{kotulska2014}.
 
 \subsection{Wybór n-gramów}
 
+
+\begin{frame}
+
+Czy można zbinaryzować zliczenia 1- i 2-gramów bez utraty zbyt dużej ilości informacji?
+
+\vspace{2cm}
+
+W 5-krotnej walidacji krzyżowej porównano 6 klasyfikatorów (lasy losowe) dla 1-gramów i 2-gramów (rozważane przerwy: 0 - 4) dla zliczeń zwykłych i zbinaryzowanych.
+
+\end{frame}
+
+
 \begin{frame}
 %czy możemy binaryzowac n-gramy?
 
@@ -548,9 +560,42 @@ Zbiór danych: 146 amyloidów i 290 nieamyloidów~\citep{kotulska2014}.
 
 \end{frame}
 
+
+\begin{frame}
+%czy możemy binaryzowac n-gramy?
+% latex table generated in R 3.2.0 by xtable 1.7-4 package
+% Thu May  7 13:31:42 2015
+\begin{table}[ht]
+\centering
+\begin{tabular}{lllrrr}
+  \hline
+n & Długość przerwy & Binaryzacja & AUC & TNR & TPR \\ 
+  \hline
+1 & NA & nie & 0.84 & 0.88 & 0.61 \\ 
+  1 & NA & tak & 0.83 & 0.86 & 0.62 \\ 
+  2 & 0 & nie & 0.82 & 0.89 & 0.60 \\ 
+  2 & 0 & tak & 0.82 & 0.87 & 0.62 \\ 
+  2 & 1 & nie & 0.79 & 0.83 & 0.62 \\ 
+  2 & 1 & tak & 0.79 & 0.83 & 0.63 \\ 
+  2 & 2 & nie & 0.76 & 0.80 & 0.57 \\ 
+  2 & 2 & tak & 0.76 & 0.80 & 0.59 \\ 
+  2 & 3 & nie & 0.71 & 0.80 & 0.47 \\ 
+  2 & 3 & tak & 0.70 & 0.79 & 0.45 \\ 
+  2 & 4 & nie & 0.49 & 0.83 & 0.19 \\ 
+  2 & 4 & tak & 0.48 & 0.82 & 0.20 \\ 
+   \hline
+\end{tabular}
+\caption{Ocena predykcji klasyfikatorów} 
+\end{table}
+
+
+\end{frame}
+
+
+
 \begin{frame}
 
-\includegraphics[width=\maxwidth]{figure/unnamed-chunk-15-1} 
+\includegraphics[width=\maxwidth]{figure/unnamed-chunk-16-1} 
 
 
 \end{frame}
@@ -559,7 +604,7 @@ Zbiór danych: 146 amyloidów i 290 nieamyloidów~\citep{kotulska2014}.
 \begin{frame}
 
 
-\includegraphics[width=\maxwidth]{figure/unnamed-chunk-16-1} 
+\includegraphics[width=\maxwidth]{figure/unnamed-chunk-17-1} 
 
 
 \end{frame}
