--- a/presentation.Rnw
+++ b/presentation.Rnw
@@ -8,7 +8,8 @@
 \usepackage{polski}
 \usepackage[utf8]{inputenc}
 \usepackage{natbib}
-
+\usepackage{booktabs}
+\usepackage{colortbl, xcolor}
 
 \usepackage{tikz}
 \usepackage{ifthen}
@@ -588,10 +589,13 @@ dists <- as.numeric(sapply(as.character(dat[["learner.id"]]), function(i) substr
 dists[is.na(dists)] <- "NA"
 dists <- factor(dists)
 
+
 res <- cbind(ngram_size, dists, ngram_bin, dat[, -1])[c(1L, 2L, 8L, 3L, 9L, 4L, 10L, 5L, 11L, 6L, 12L, 7L), ]
 colnames(res) <- c("n", "Długość przerwy", "Binaryzacja", "AUC", "TNR", "TPR")
-
-print(xtable(res, caption = "Ocena predykcji klasyfikatorów"), include.rownames = FALSE)
+rws <- seq(1, nrow(res), by = 2)
+col <- rep("\\rowcolor[gray]{0.85}", length(rws))
+print(xtable(res, caption = "Ocena predykcji klasyfikatorów"), include.rownames = FALSE, booktabs = TRUE,
+add.to.row = list(pos = as.list(rws), command = col))
 @
 
 \end{frame}
@@ -622,8 +626,8 @@ ggplot(pair_dat, aes(x = normal, y =  binary, col = tar, fill = tar)) +
   geom_point(position = "jitter", size=3, shape=21, alpha = 0.5) + 
   scale_colour_hue("Amyloid", l=70, c=150) +
   scale_fill_hue("Amyloid", l=70, c=150) + 
-  scale_x_discrete("Predykcja dla zliczeń n-gramów") +
-  scale_y_discrete("Predykcja dla zbinaryzowanych zliczeń n-gramów") + 
+  scale_x_discrete("Predykcja amyloidu (zliczenia n-gramów)") +
+  scale_y_discrete("Predykcja amyloidu (zbinaryzowane zliczenia n-gramów)") + 
   facet_wrap(~ dists)
 @
 
@@ -638,12 +642,62 @@ ggplot(mbis, aes(x = ngram, fill = variable, y = value)) +
   geom_bar(position = "dodge", stat="identity") +
   scale_fill_hue("Amyloid", l=70, c=150) +
   scale_x_discrete("2-gram") +
-  scale_y_continuous("Częstość istotnych 2-gramów") +
+  scale_y_continuous("Częstość istotnych 2-gramów (p-value < 0.01") +
   theme_presentation
 @
 
 \end{frame}
 
+\subsection{Predykcja w oparciu o n-gramy}
+
+\begin{frame}
+
+\begin{enumerate}
+\item W oparciu o wyniki poprzedniej analizy zliczono następujace n-gramy: 1-gramy, 2-gramy (przerwy od 0 do 3) i 3-gramy (przerwy od 0 do 1). 
+\item Wszystkie n-gramy (oprócz 1-gramów) zbinaryzowano. 
+\item Metodą QuiPT wybrano $214$ z $25600$ potencjalnych n-gramów ($0.0083$). 
+\item Wszystkie 1-gramy i wybrane 2 oraz 3-gramy użyto podczas 5-krotnej walidacji krzyżowej.
+\end{enumerate}
+
+\end{frame}
+
+
+\begin{frame}
+
+<<echo = FALSE,message=FALSE,warning=FALSE,results='asis',fig.height=5.5>>=
+load("cv_data.RData")
+
+colnames(cv_dat) <- c("Iteracja", "AUC", "TPR", "TFR")
+print(xtable(cv_dat, caption = "Predykcja ostatecznego klasyfikatora. Średnie AUC: $0.8798$. Średnie TNR: $0.9448$. Średnie TPR: $0.6230$."), include.rownames = FALSE)
+@
+
+\end{frame}
+
+
+\begin{frame}
+
+<<echo = FALSE,message=FALSE,warning=FALSE,results='asis',fig.height=5.5>>=
+
+ggplot(cv_plot, aes(x = x, y = y)) +
+  geom_line() +
+  scale_x_continuous("TPR") + 
+  scale_y_continuous("TFR") +
+  geom_point(size=4, shape=21, alpha = 0.5)
+@
+
+\end{frame}
+
+\subsection{Podsumowanie}
+
+\begin{frame}
+
+\begin{itemize}
+\item biogram: \url{http://github.com/michbur/biogram}
+\item QuiPT: \url{http://github.com/michbur/QuiPT}
+\item signalHSMM: \url{http://github.com/michbur/signalHSMM}
+\end{itemize}
+
+\end{frame}
 
 \begin{frame}
 
