--- a/presentation.tex
+++ b/presentation.tex
@@ -57,7 +57,8 @@
 \usepackage{polski}
 \usepackage[utf8]{inputenc}
 \usepackage{natbib}
-
+\usepackage{booktabs}
+\usepackage{colortbl, xcolor}
 
 \usepackage{tikz}
 \usepackage{ifthen}
@@ -133,7 +134,7 @@ Pierwotnie analiza n-gramów rozwijana była na potrzeby analizy języka natural
 
 
 % latex table generated in R 3.2.0 by xtable 1.7-4 package
-% Thu May 07 22:08:25 2015
+% Fri May 08 00:34:42 2015
 \begin{table}[ht]
 \centering
 \begin{tabular}{rllllll}
@@ -152,7 +153,7 @@ S1 & C & T & T & A & G & C \\
 
   
 % latex table generated in R 3.2.0 by xtable 1.7-4 package
-% Thu May 07 22:08:25 2015
+% Fri May 08 00:34:42 2015
 \begin{table}[ht]
 \centering
 \begin{tabular}{rrrrr}
@@ -173,7 +174,7 @@ S1 & 1 & 2 & 1 & 2 \\
 \begin{frame}
 
 % latex table generated in R 3.2.0 by xtable 1.7-4 package
-% Thu May 07 22:08:25 2015
+% Fri May 08 00:34:42 2015
 \begin{table}[ht]
 \centering
 \begin{tabular}{rllllll}
@@ -192,7 +193,7 @@ S1 & C & T & T & A & G & C \\
 
   
 % latex table generated in R 3.2.0 by xtable 1.7-4 package
-% Thu May 07 22:08:25 2015
+% Fri May 08 00:34:42 2015
 \begin{table}[ht]
 \centering
 \begin{tabular}{rrrrrrrrr}
@@ -242,7 +243,7 @@ n-gramy mogą być przypisaną informację o pozycjach na których występują.
 \begin{frame}
 
 % latex table generated in R 3.2.0 by xtable 1.7-4 package
-% Thu May 07 22:08:25 2015
+% Fri May 08 00:34:43 2015
 \begin{table}[ht]
 \centering
 \begin{tabular}{rllllll}
@@ -261,7 +262,7 @@ S1 & C & T & T & A & G & C \\
 
   
 % latex table generated in R 3.2.0 by xtable 1.7-4 package
-% Thu May 07 22:08:26 2015
+% Fri May 08 00:34:43 2015
 \begin{table}[ht]
 \centering
 \begin{tabular}{rrrrrrrrr}
@@ -312,7 +313,7 @@ n-gramy mogą być nieciągłe - pomiędzy elementami n-gramu mogą występować
 \begin{frame}
 
 % latex table generated in R 3.2.0 by xtable 1.7-4 package
-% Thu May 07 22:08:26 2015
+% Fri May 08 00:34:43 2015
 \begin{table}[ht]
 \centering
 \begin{tabular}{rllllll}
@@ -331,7 +332,7 @@ S1 & C & T & T & A & G & C \\
 
   
 % latex table generated in R 3.2.0 by xtable 1.7-4 package
-% Thu May 07 22:08:26 2015
+% Fri May 08 00:34:43 2015
 \begin{table}[ht]
 \centering
 \begin{tabular}{rrrrrrrrr}
@@ -615,26 +616,26 @@ W 5-krotnej walidacji krzyżowej porównano 6 klasyfikatorów (lasy losowe) dla 
 \begin{frame}
 %czy możemy binaryzowac n-gramy?
 % latex table generated in R 3.2.0 by xtable 1.7-4 package
-% Thu May 07 22:08:28 2015
+% Fri May 08 00:34:46 2015
 \begin{table}[ht]
 \centering
 \begin{tabular}{lllrrr}
-  \hline
+  \toprule
 n & Długość przerwy & Binaryzacja & AUC & TNR & TPR \\ 
-  \hline
+  \midrule
 1 & NA & nie & 0.84 & 0.88 & 0.61 \\ 
-  1 & NA & tak & 0.83 & 0.86 & 0.62 \\ 
+   \rowcolor[gray]{0.75}1 & NA & tak & 0.83 & 0.86 & 0.62 \\ 
   2 & 0 & nie & 0.82 & 0.89 & 0.60 \\ 
-  2 & 0 & tak & 0.82 & 0.87 & 0.62 \\ 
+   \rowcolor[gray]{0.75}2 & 0 & tak & 0.82 & 0.87 & 0.62 \\ 
   2 & 1 & nie & 0.79 & 0.83 & 0.62 \\ 
-  2 & 1 & tak & 0.79 & 0.83 & 0.63 \\ 
+   \rowcolor[gray]{0.75}2 & 1 & tak & 0.79 & 0.83 & 0.63 \\ 
   2 & 2 & nie & 0.76 & 0.80 & 0.57 \\ 
-  2 & 2 & tak & 0.76 & 0.80 & 0.59 \\ 
+   \rowcolor[gray]{0.75}2 & 2 & tak & 0.76 & 0.80 & 0.59 \\ 
   2 & 3 & nie & 0.71 & 0.80 & 0.47 \\ 
-  2 & 3 & tak & 0.70 & 0.79 & 0.45 \\ 
+   \rowcolor[gray]{0.75}2 & 3 & tak & 0.70 & 0.79 & 0.45 \\ 
   2 & 4 & nie & 0.49 & 0.83 & 0.19 \\ 
-  2 & 4 & tak & 0.48 & 0.82 & 0.20 \\ 
-   \hline
+   \rowcolor[gray]{0.75}2 & 4 & tak & 0.48 & 0.82 & 0.20 \\ 
+   \bottomrule
 \end{tabular}
 \caption{Ocena predykcji klasyfikatorów} 
 \end{table}
@@ -667,6 +668,63 @@ n & Długość przerwy & Binaryzacja & AUC & TNR & TPR \\
 
 \end{frame}
 
+\subsection{Predykcja w oparciu o n-gramy}
+
+\begin{frame}
+
+\begin{enumerate}
+\item W oparciu o wyniki poprzedniej analizy zliczono następujace n-gramy: 1-gramy, 2-gramy (przerwy od 0 do 3) i 3-gramy (przerwy od 0 do 1). 
+\item Wszystkie n-gramy (oprócz 1-gramów) zbinaryzowano. 
+\item Metodą QuiPT wybrano $214$ z $25600$ potencjalnych n-gramów ($0.0083$). 
+\item Wszystkie 1-gramy i wybrane 2 oraz 3-gramy użyto podczas 5-krotnej walidacji krzyżowej.
+\end{enumerate}
+
+\end{frame}
+
+
+\begin{frame}
+
+% latex table generated in R 3.2.0 by xtable 1.7-4 package
+% Fri May 08 00:34:47 2015
+\begin{table}[ht]
+\centering
+\begin{tabular}{rrrr}
+  \hline
+Iteracja & AUC & TPR & TFR \\ 
+  \hline
+  1 & 0.92 & 0.98 & 0.59 \\ 
+    2 & 0.88 & 0.95 & 0.67 \\ 
+    3 & 0.86 & 0.93 & 0.66 \\ 
+    4 & 0.84 & 0.90 & 0.66 \\ 
+    5 & 0.89 & 0.97 & 0.55 \\ 
+   \hline
+\end{tabular}
+\caption{Predykcja ostatecznego klasyfikatora. Średnie AUC: $0.8798$. Średnie TNR: $0.9448$. Średnie TPR: $0.6230$.} 
+\end{table}
+
+
+\end{frame}
+
+
+\begin{frame}
+
+
+\includegraphics[width=\maxwidth]{figure/unnamed-chunk-19-1} 
+
+
+\end{frame}
+
+\subsection{Podsumowanie}
+
+\begin{frame}
+
+\begin{itemize}
+\item biogram: \url{http://github.com/michbur/biogram}
+\item QuiPT: \url{http://github.com/michbur/QuiPT}
+\item signalHSMM: \url{http://github.com/michbur/signalHSMM}
+\end{itemize}
+
+\end{frame}
 
 \begin{frame}
 
