--- a/presentation.tex
+++ b/presentation.tex
@@ -134,7 +134,7 @@ Pierwotnie analiza n-gramów rozwijana była na potrzeby analizy języka natural
 
 
 % latex table generated in R 3.2.0 by xtable 1.7-4 package
-% Fri May 08 00:34:42 2015
+% Fri May  8 08:26:13 2015
 \begin{table}[ht]
 \centering
 \begin{tabular}{rllllll}
@@ -153,7 +153,7 @@ S1 & C & T & T & A & G & C \\
 
   
 % latex table generated in R 3.2.0 by xtable 1.7-4 package
-% Fri May 08 00:34:42 2015
+% Fri May  8 08:26:13 2015
 \begin{table}[ht]
 \centering
 \begin{tabular}{rrrrr}
@@ -174,7 +174,7 @@ S1 & 1 & 2 & 1 & 2 \\
 \begin{frame}
 
 % latex table generated in R 3.2.0 by xtable 1.7-4 package
-% Fri May 08 00:34:42 2015
+% Fri May  8 08:26:13 2015
 \begin{table}[ht]
 \centering
 \begin{tabular}{rllllll}
@@ -193,7 +193,7 @@ S1 & C & T & T & A & G & C \\
 
   
 % latex table generated in R 3.2.0 by xtable 1.7-4 package
-% Fri May 08 00:34:42 2015
+% Fri May  8 08:26:13 2015
 \begin{table}[ht]
 \centering
 \begin{tabular}{rrrrrrrrr}
@@ -243,7 +243,7 @@ n-gramy mogą być przypisaną informację o pozycjach na których występują.
 \begin{frame}
 
 % latex table generated in R 3.2.0 by xtable 1.7-4 package
-% Fri May 08 00:34:43 2015
+% Fri May  8 08:26:13 2015
 \begin{table}[ht]
 \centering
 \begin{tabular}{rllllll}
@@ -262,7 +262,7 @@ S1 & C & T & T & A & G & C \\
 
   
 % latex table generated in R 3.2.0 by xtable 1.7-4 package
-% Fri May 08 00:34:43 2015
+% Fri May  8 08:26:13 2015
 \begin{table}[ht]
 \centering
 \begin{tabular}{rrrrrrrrr}
@@ -313,7 +313,7 @@ n-gramy mogą być nieciągłe - pomiędzy elementami n-gramu mogą występować
 \begin{frame}
 
 % latex table generated in R 3.2.0 by xtable 1.7-4 package
-% Fri May 08 00:34:43 2015
+% Fri May  8 08:26:14 2015
 \begin{table}[ht]
 \centering
 \begin{tabular}{rllllll}
@@ -332,7 +332,7 @@ S1 & C & T & T & A & G & C \\
 
   
 % latex table generated in R 3.2.0 by xtable 1.7-4 package
-% Fri May 08 00:34:43 2015
+% Fri May  8 08:26:14 2015
 \begin{table}[ht]
 \centering
 \begin{tabular}{rrrrrrrrr}
@@ -616,28 +616,28 @@ W 5-krotnej walidacji krzyżowej porównano 6 klasyfikatorów (lasy losowe) dla 
 \begin{frame}
 %czy możemy binaryzowac n-gramy?
 % latex table generated in R 3.2.0 by xtable 1.7-4 package
-% Fri May 08 00:34:46 2015
+% Fri May  8 08:26:18 2015
 \begin{table}[ht]
 \centering
 \begin{tabular}{lllrrr}
   \toprule
-n & Długość przerwy & Binaryzacja & AUC & TNR & TPR \\ 
+n & Przerwa & Binaryzacja & AUC & TNR & TPR \\ 
   \midrule
-1 & NA & nie & 0.84 & 0.88 & 0.61 \\ 
-   \rowcolor[gray]{0.75}1 & NA & tak & 0.83 & 0.86 & 0.62 \\ 
-  2 & 0 & nie & 0.82 & 0.89 & 0.60 \\ 
-   \rowcolor[gray]{0.75}2 & 0 & tak & 0.82 & 0.87 & 0.62 \\ 
-  2 & 1 & nie & 0.79 & 0.83 & 0.62 \\ 
-   \rowcolor[gray]{0.75}2 & 1 & tak & 0.79 & 0.83 & 0.63 \\ 
-  2 & 2 & nie & 0.76 & 0.80 & 0.57 \\ 
-   \rowcolor[gray]{0.75}2 & 2 & tak & 0.76 & 0.80 & 0.59 \\ 
-  2 & 3 & nie & 0.71 & 0.80 & 0.47 \\ 
-   \rowcolor[gray]{0.75}2 & 3 & tak & 0.70 & 0.79 & 0.45 \\ 
-  2 & 4 & nie & 0.49 & 0.83 & 0.19 \\ 
-   \rowcolor[gray]{0.75}2 & 4 & tak & 0.48 & 0.82 & 0.20 \\ 
+1 & NA & nie & 0.8351 & 0.8828 & 0.6094 \\ 
+   \rowcolor[gray]{0.85}1 & NA & tak & 0.8309 & 0.8621 & 0.6172 \\ 
+  2 & 0 & nie & 0.8182 & 0.8862 & 0.6030 \\ 
+   \rowcolor[gray]{0.85}2 & 0 & tak & 0.8162 & 0.8690 & 0.6168 \\ 
+  2 & 1 & nie & 0.7894 & 0.8276 & 0.6168 \\ 
+   \rowcolor[gray]{0.85}2 & 1 & tak & 0.7863 & 0.8310 & 0.6303 \\ 
+  2 & 2 & nie & 0.7617 & 0.7966 & 0.5685 \\ 
+   \rowcolor[gray]{0.85}2 & 2 & tak & 0.7629 & 0.8000 & 0.5892 \\ 
+  2 & 3 & nie & 0.7054 & 0.7966 & 0.4717 \\ 
+   \rowcolor[gray]{0.85}2 & 3 & tak & 0.6979 & 0.7897 & 0.4513 \\ 
+  2 & 4 & nie & 0.4904 & 0.8345 & 0.1851 \\ 
+   \rowcolor[gray]{0.85}2 & 4 & tak & 0.4824 & 0.8241 & 0.1989 \\ 
    \bottomrule
 \end{tabular}
-\caption{Ocena predykcji klasyfikatorów} 
+\caption{Ocena predykcji klasyfikatorów.} 
 \end{table}
 
 
@@ -685,7 +685,7 @@ n & Długość przerwy & Binaryzacja & AUC & TNR & TPR \\
 \begin{frame}
 
 % latex table generated in R 3.2.0 by xtable 1.7-4 package
-% Fri May 08 00:34:47 2015
+% Fri May  8 08:26:19 2015
 \begin{table}[ht]
 \centering
 \begin{tabular}{rrrr}
