--- a/presentation.tex
+++ b/presentation.tex
@@ -134,7 +134,7 @@ Pierwotnie analiza n-gramów rozwijana była na potrzeby analizy języka natural
 
 
 % latex table generated in R 3.2.0 by xtable 1.7-4 package
-% Fri May  8 08:40:02 2015
+% Fri May  8 08:43:15 2015
 \begin{table}[ht]
 \centering
 \begin{tabular}{rllllll}
@@ -153,7 +153,7 @@ S1 & C & T & T & A & G & C \\
 
   
 % latex table generated in R 3.2.0 by xtable 1.7-4 package
-% Fri May  8 08:40:02 2015
+% Fri May  8 08:43:15 2015
 \begin{table}[ht]
 \centering
 \begin{tabular}{rrrrr}
@@ -174,7 +174,7 @@ S1 & 1 & 2 & 1 & 2 \\
 \begin{frame}
 
 % latex table generated in R 3.2.0 by xtable 1.7-4 package
-% Fri May  8 08:40:03 2015
+% Fri May  8 08:43:15 2015
 \begin{table}[ht]
 \centering
 \begin{tabular}{rllllll}
@@ -193,7 +193,7 @@ S1 & C & T & T & A & G & C \\
 
   
 % latex table generated in R 3.2.0 by xtable 1.7-4 package
-% Fri May  8 08:40:03 2015
+% Fri May  8 08:43:15 2015
 \begin{table}[ht]
 \centering
 \begin{tabular}{rrrrrrrrr}
@@ -243,7 +243,7 @@ n-gramy mogą być przypisaną informację o pozycjach na których występują.
 \begin{frame}
 
 % latex table generated in R 3.2.0 by xtable 1.7-4 package
-% Fri May  8 08:40:03 2015
+% Fri May  8 08:43:16 2015
 \begin{table}[ht]
 \centering
 \begin{tabular}{rllllll}
@@ -262,7 +262,7 @@ S1 & C & T & T & A & G & C \\
 
   
 % latex table generated in R 3.2.0 by xtable 1.7-4 package
-% Fri May  8 08:40:03 2015
+% Fri May  8 08:43:16 2015
 \begin{table}[ht]
 \centering
 \begin{tabular}{rrrrrrrrr}
@@ -313,7 +313,7 @@ n-gramy mogą być nieciągłe - pomiędzy elementami n-gramu mogą występować
 \begin{frame}
 
 % latex table generated in R 3.2.0 by xtable 1.7-4 package
-% Fri May  8 08:40:03 2015
+% Fri May  8 08:43:16 2015
 \begin{table}[ht]
 \centering
 \begin{tabular}{rllllll}
@@ -332,7 +332,7 @@ S1 & C & T & T & A & G & C \\
 
   
 % latex table generated in R 3.2.0 by xtable 1.7-4 package
-% Fri May  8 08:40:03 2015
+% Fri May  8 08:43:16 2015
 \begin{table}[ht]
 \centering
 \begin{tabular}{rrrrrrrrr}
@@ -616,7 +616,7 @@ W 5-krotnej walidacji krzyżowej porównano 6 klasyfikatorów (lasy losowe) dla 
 \begin{frame}
 %czy możemy binaryzowac n-gramy?
 % latex table generated in R 3.2.0 by xtable 1.7-4 package
-% Fri May  8 08:40:07 2015
+% Fri May  8 08:43:20 2015
 \begin{table}[ht]
 \centering
 \begin{tabular}{lllrrr}
@@ -673,10 +673,10 @@ n & Przerwa & Binaryzacja & AUC & TNR & TPR \\
 \begin{frame}
 
 \begin{enumerate}
-\item W oparciu o wyniki poprzedniej analizy zliczono następujace n-gramy: 1-gramy, 2-gramy (przerwy od 0 do 3) i 3-gramy (przerwy od 0 do 1). 
+\item W oparciu o wyniki poprzedniej analizy zliczono następujace n-gramy: 1-gramy, 2-gramy (przerwy od 0 do 3) i 3-gramy (wszystkie kombinacje przerw od 0 do 1). 
 \item Wszystkie n-gramy (oprócz 1-gramów) zbinaryzowano. 
 \item Metodą QuiPT wybrano $214$ z $25600$ potencjalnych n-gramów ($0.0083$). 
-\item Wszystkie 1-gramy i wybrane 2 oraz 3-gramy użyto podczas 5-krotnej walidacji krzyżowej.
+\item Wszystkie 1-gramy i wybrane 2 oraz 3-gramy użyto podczas 5-krotnej walidacji krzyżowej lasu losowego.
 \end{enumerate}
 
 \end{frame}
@@ -685,7 +685,7 @@ n & Przerwa & Binaryzacja & AUC & TNR & TPR \\
 \begin{frame}
 
 % latex table generated in R 3.2.0 by xtable 1.7-4 package
-% Fri May  8 08:40:08 2015
+% Fri May  8 08:43:21 2015
 \begin{table}[ht]
 \centering
 \begin{tabular}{rrrr}
